syntax = "proto3";

package greet;

option go_package = "greetpb";

// Greeting is a proto message
message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// Request message for unary api
message GreetRequest {
    Greeting greeting = 1;
}

// Response message from unary api
message GreetResponse{
    string result = 1;
}

message GreetManyTimesRequest{
    Greeting greeting =1;
}

message GreetManyTimesResponse{
    string result = 1;
}

message LongGreetRequest{
    Greeting greeting = 1;
}

message LongGreetResponse{
    string result = 1;
}

message GreetEveryoneRequest{
    Greeting greeting = 1;
}

message GreetEveryoneResponse{
    string result = 1;
}

// Request message for unary api with Deadline
message GreetWithDeadLineRequest {
    Greeting greeting = 1;
}

// Response message from unary api with Deadline
message GreetWithDeadLineResponse{
    string result = 1;
}

service GreetService {
    // Unary grpc API
    rpc Greet (GreetRequest) returns (GreetResponse){};

    // Server Streaming grpc API
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // Client Streaming grpc API
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse){};

    // BiDi Streaming grpc API
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

    // Unary grpc API with Deadline
    rpc GreetWithDeadLine (GreetWithDeadLineRequest) returns (GreetWithDeadLineResponse){};
}